# notas-pytnon-galileo

./: pruebas.ipynb  pyproject.toml  readme.mdown  requirements.txt
clase0703222/: clase.ipynb
clase130722/: clase130722.ipynb
clase220307/: clase-laboratorio.ipynb  guatemala-2016-encuestas.csv
clase220314/: clase.ipynb
clase220321/: clase220321.ipynb
clase220425/: clase.ipynb
clase220509/: FuelConsumption.csv  clase220509.ipynb
clase220516/: clase220516.ipynb  lab_guiado.ipynb  teleCust1000t.csv
clase220523/: bmd.csv  laboratorio.ipynb
clase220530/: clase220530.ipynb
clase220606/: laboratorioDecisionTree.ipynb  laboratoriokmeans.ipynb
clase220718/: clase220718.ipynb
competencia_kaggle/: puntajes.ipynb
football/: appearances.csv  clubs.csv  clubs_with_features.csv  competitions.csv  football.ipynb  games.csv  players.csv  players_merged.csv
laboratorio_bicicletas/: laboratorio_bicicletas.ipynb
laboratorio_diabetes/: laboratorio_diabetes.ipynb
laboratorio_graficas/: laboratorio_graficas.ipynb  resultados-electorales-de-los-partidos-politicos-en-guatemala-de-1985-a-2012.xlsx
laboratorio_numpy/: laboratorio.ipynb
laboratorio_regresion_logistica/: ChurnData.csv  regresion_logistica.ipynb
parcial 1/: 22006829.ipynb
parcial 1/data/: bicicletas.csv
parcial220605/: parcial - Practica.ipynb
proyecto captcha/: Imagenes.rar  demo copy.ipynb  demo.ipynb  limpieza.ipynb  plot_digits_classification.ipynb  proyecto.ipynb
