[tool.poetry]
name = "pythondata"
version = "0.1.0"
description = ""
authors = ["Dennis Xiloj <denjohx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.2"
Pillow = "^9.0.1"
seaborn = "^0.11.2"
plotly = "^5.6.0"
matplotlib = "^3.5.1"
nbformat = "^5.2.0"
lxml = "^4.8.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
